Updated html and css files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="styles.css">
     <title>My Portfolio</title>
 </head>
@@ -15,28 +14,29 @@
 
     <header class="header">
         <nav class="navbar">
-            <h4 class="header-name">Augustine Abah</h4>
-            <img src="images/Union.png" alt="">
+            <a href="" class="header-name">Augustine Abah</a>
+            <img src="images/Union.png" alt="" class="hamburger-menu">
         </nav>
     </header>
 
     <!-- Introduction -->
-    <img src="images/Ellipse18.svg" class="introduction-image" alt="">
+    <!-- <img src="images/Ellipse18.svg" class="introduction-image" alt=""> -->
     <section>
+        <div class="introduction-image"></div>
         <div class="introduction">
             <h1 class="introduction-name">Augustine Abah</h1>
             <h2 class="soft-developer">Software Developer</h2>
             <p class="intro-paragraph">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  don’t hesitate to contact me.</p>
             <img src="images/Devider.png" class="intro-line" alt="">
         </div>
-        
     </section>
 
     <!-- Experience -->
 
-    <img src="images/Ellipse19.svg" class="experience-img" alt="">
+    <!-- <img src="images/Ellipse19.svg" class="experience-img" alt=""> -->
 
     <section class="experience">
+        <div class="experience-image"></div>
         <div class="language">
             <div class="lang-align">
                 <h4 class="experience-heading">Language</h4>
